syntax = "proto3";

service WarehouseService {
  rpc getData(WarehouseRequest) returns (WarehouseData) {}
}

message WarehouseRequest { string id = 1; }

message WarehouseData {
  string warehouseID = 1;
  string warehouseName = 2;
  string timestamp = 3;
  repeated Product productData = 4;
}

message Product {
  string productID = 1;
  string productName = 2;
  string productCategory = 3;
  int32 productQuantity = 4;
}
